--- a/Threading/app/src/main/res/layout/activity_main.xml
+++ b/Threading/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,14 @@
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:visibility="gone" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,6 +26,7 @@
             android:orientation="vertical" >
 
             <TextView
+                android:id="@+id/textViewMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/contents_shifted" />
@@ -31,12 +34,12 @@
     </ScrollView>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextShift"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="number|numberSigned"
-        android:text="Name" />
+        android:hint="@string/number_to_shift"
+        android:inputType="number|numberSigned" />
 
     <Button
         android:id="@+id/button"
