--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,20 @@
         android:id="@+id/progress_bar"
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
         android:visibility="gone"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/linear_layout">
         <TextView
             android:id="@+id/cipher_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/contents_shifted"
-            app:layout_constraintBottom_toBottomOf="@id/linear_layout"
+            app:layout_constraintBottom_toTopOf="@id/linear_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +31,7 @@
         android:id="@+id/linear_layout"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
