--- a/Threading/app/src/main/res/layout/activity_main.xml
+++ b/Threading/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
         android:visibility="gone" />
 
     <ScrollView
