added a save button

--- a/Threading/app/src/main/res/layout/activity_main.xml
+++ b/Threading/app/src/main/res/layout/activity_main.xml
@@ -46,10 +46,24 @@
         android:hint="@string/number_to_shift"
         android:inputType="number|numberSigned" />
 
-    <Button
-        android:id="@+id/button"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnShift"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/shift" />
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/save" />
+    </LinearLayout>
 
 </LinearLayout>
