--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,41 @@
     tools:context=".MainActivity">
 
     <ScrollView
+        android:id="@+id/cipher_data"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="300dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello World!"
+            android:layout_height="wrap_content"
+            android:text="@string/contents_shifted"
             app:layout_constraintTop_toTopOf="parent" />
 
     </ScrollView>
+
+    <EditText
+        android:id="@+id/shift_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter size and direction of shift"
+        app:layout_constraintTop_toBottomOf="@id/cipher_data"/>
+
+    <Button
+        android:id="@+id/shift_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Shift"
+        app:layout_constraintTop_toBottomOf="@id/shift_input"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/shift_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
