Change progressBar to horizontal, hide editText and Button while running. Add Onstop to cancel AsyncTask

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
             android:visibility="gone"
             android:id="@+id/progress_bar"
             android:layout_width="0dp"
