--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,13 @@
     tools:context=".MainActivity">
 
     <ScrollView
-        android:id="@+id/cipher_data"
+        android:id="@+id/cipher_data_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/cipher_data_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/contents_shifted"
@@ -25,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter size and direction of shift"
-        app:layout_constraintTop_toBottomOf="@id/cipher_data"/>
+        app:layout_constraintTop_toBottomOf="@id/cipher_data_view"/>
 
     <Button
         android:id="@+id/shift_button"
