--- a/Cyphers/app/src/main/res/layout/activity_main.xml
+++ b/Cyphers/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,8 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="64dp"
+        android:progressBackgroundTint="@color/green"
+        android:progressTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/scroll_view"
